--- a/#13 DOM/HTML/01 What Is DOM And Select Elements.html
+++ b/#13 DOM/HTML/01 What Is DOM And Select Elements.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dom</title>
+    <title>What Is DOM And Select Elements</title>
 </head>
 <body>
     <span class="my-span special">My Span</span>
