--- a/#13 DOM/HTML/02 Get Set Elements Content And Attributes.html
+++ b/#13 DOM/HTML/02 Get Set Elements Content And Attributes.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DOM</title>
+    <title>Get Set Elements Content And Attributes</title>
 </head>
 <body>
     <div class="js">JavaScript <span>div</span> &lt;span&gt;</div>
